--- a/Acadamy/Acadamy.vcxproj
+++ b/Acadamy/Acadamy.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{3ac677b1-ef24-450d-a0b0-c19b7ec0b77a}</ProjectGuid>
     <RootNamespace>Acadamy</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Inheritance</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
